--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -10,7 +10,7 @@ body {
     overflow-x: hidden;
     overflow-y: auto;
 
-    padding: 2.75rem 1rem;
+    padding: 3rem 0 1rem 1rem;
 
     transition: 500ms linear background-color;
   }
