--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -12,6 +12,10 @@ section#page {
   max-width: 100vw;
   overflow: hidden;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   & > section {
     min-height: inherit;
     max-height: inherit;
