--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,10 @@
+@import "~bootstrap";
 
 @import "variables";
 @import "fonts";
 @import "navbar";
 @import "page";
+@import "groups";
 
 @import "pages/home-guest";
 @import "pages/home-user";
