Added somes pages + fixed some bugs

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,10 +7,14 @@
 @import "navbar";
 @import "page";
 @import "groups";
+@import "projects";
+@import "users";
 
 @import "pages/home-guest";
 @import "pages/home-user";
 @import "pages/group";
+@import "pages/project";
+@import "pages/user";
 
 @import "pages/loading";
 @import "pages/error-404";
