Ajout du timer (mais l'implémentation est encore en cours)

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import "groups";
 @import "projects";
 @import "users";
+@import "timer";
 
 @import "pages/home-guest";
 @import "pages/home-user";
