--- a/src/scss/_timer.scss
+++ b/src/scss/_timer.scss
@@ -164,10 +164,10 @@
 
   p {
     border-radius: 20px;
-    font-size: 76px;
+    font-size: 3.5rem;
     font-weight: 400;
     position: absolute;
-    top: 17px;
+    top: 3.5rem;
     width: 260px;
     left: 20px;
   }
