--- a/src/scss/_timer.scss
+++ b/src/scss/_timer.scss
@@ -52,7 +52,7 @@
   pointer-events: none;
 
   &:after {
-    background: $primary;
+    background: darken($primary, 25%);
     border-radius: 50%;
     content: "";
     display: block;
