Updated bootstrap to version 5 alpha 1

--- a/src/scss/_timer.scss
+++ b/src/scss/_timer.scss
@@ -52,7 +52,7 @@
   pointer-events: none;
 
   &:after {
-    background: darken($primary, 45%);
+    background: black;
     border-radius: 50%;
     content: "";
     display: block;
