--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,8 @@
-@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/bootstrap";
+
+/*@import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
-@import "~bootstrap/scss/mixins";
+@import "~bootstrap/scss/mixins";*/
 
 @import "variables";
 @import "fonts";
