MAJ front : logo + form data dans fetch

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 @import "projects";
 @import "users";
 @import "timer";
+@import "logo";
 
 @import "pages/home-guest";
 @import "pages/home-user";
